--- a/ReleaseManagement/ReleaseManagement.Infra.IoC/ReleaseManagement.Infra.IoC.csproj
+++ b/ReleaseManagement/ReleaseManagement.Infra.IoC/ReleaseManagement.Infra.IoC.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ReleaseManagement.Application\ReleaseManagement.Application.csproj" />
+    <ProjectReference Include="..\ReleaseManagement.Infra.Data\ReleaseManagement.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
